# unity_game_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AudioStream.msg  EndPageQuestions.msg  GameLaunchCommand.msg  GameLaunchState.msg  MicAsrResult.msg  SensorLaunchCommand.msg  SensorLaunchState.msg  StorybookCommand.msg  StorybookEvent.msg  StorybookExpectedResponse.msg  StorybookJiboPrompt.msg  StorybookKeyword.msg  StorybookKeywordQNA.msg  StorybookPageInfo.msg  StorybookPersonalizationLog.msg  StorybookPromptHighlightObject.msg  StorybookRobotResponse.msg  StorybookSceneObject.msg  StorybookState.msg  StorybookTinkerText.msg  TapGameCommand.msg  TapGameLog.msg  TapGameRoundSummary.msg  iSpyAction.msg  iSpyCommand.msg
msg/FaceIdMsgs/: FaceIDCommand.msg  FaceIDEvent.msg  FaceIDState.msg  FaceIDTraining.msg
msg/RhymeGameMsgs/: RhymeGameCommand.msg  RhymeGameLog.msg
msg/SpellingGameMsgs/: SpellingGameCommand.msg  SpellingGameFeatureLog.msg  SpellingGameLog.msg  SpellingGameRoundSummary.msg
msg/iSpyMsgs/: AudioStream.msg  iSpyAction.msg  iSpyChildOnlyInteraction.msg  iSpyChildRobotInteraction.msg  iSpyCommand.msg  iSpyLog.msg
