<?xml version="1.0"?>
<package>
  <name>unity_game_msgs</name>
  <version>2.0.0</version>
  <description>Messages for Unity tablet game and ROS communication</description>

  <maintainer email="samuelsp@media.mit.edu">samuelsp</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mitmedialab/unity-game-msgs</url>
  <author email="samuelsp@media.mit.edu">samuelsp</author>
  <author email="hchen25@media.mit.edu">Huili Chen</author>
  <author email="xiajie@media.mit.edu">Brayden Zhang</author>
  <author email="haewon@media.mit.edu">Hae Won Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
